--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,24 @@ li{
     float: left;
     margin: auto;
     text-align: center;
+    border-radius: 3px;
+    margin-bottom: 3.7%;
 }
-picture, img{
+img{
     max-width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 3px;
+    filter: grayscale(70%) blur(0.3px);
+    position: relative;
+    transition: all linear 0.5s, transform 0.2s ease-out;
 }
+img:hover{
+    filter: none;
+    box-shadow: none;
+    transform: scale(1.1);
+    z-index: 100;
+}
+
 footer{
     clear: both;
 }
@@ -45,10 +59,16 @@ footer{
     li{
         width: 50%;
     }
+    img:hover{
+        transform: scale(1.2);
+    }
 }
 
 @media screen and (min-width: 1200px){
     li{
         width: 25%;
-    }  
+    } 
+    img:hover{
+        transform: scale(1.3);
+    }
 }
