--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,9 @@ li{
     border-radius: 3px;
     margin-bottom: 3.7%;
 }
+picture{
+    max-width: 90%;
+}
 img{
     max-width: 90%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
